[gd_scene load_steps=45 format=3 uid="uid://b7ln60f04dhpl"]

[ext_resource type="Theme" uid="uid://dqql2g0hhe5xd" path="res://scenes/ui/level_theme.tres" id="1_7shaq"]
[ext_resource type="FontFile" uid="uid://4kaf8m7opkjh" path="res://fonts/a-space/A-Space Regular Demo.otf" id="2_luebk"]
[ext_resource type="Script" path="res://scenes/level_map/level_select.gd" id="2_s0hvj"]
[ext_resource type="Environment" uid="uid://bhmwy1ygx05bk" path="res://scenes/default_env.tres" id="3_dqn4j"]
[ext_resource type="Texture2D" uid="uid://cbuius8gxtinx" path="res://assets/start_bg2.png" id="3_hunw0"]
[ext_resource type="Texture2D" uid="uid://dvhjryb3vy68e" path="res://assets/start_bg0.png" id="4_137gh"]
[ext_resource type="Script" path="res://scenes/world_environment.gd" id="4_737iy"]
[ext_resource type="Script" path="res://scenes/ui/level_suffix.gd" id="4_v353u"]
[ext_resource type="Script" path="res://scenes/level_map/level_map.gd" id="5_d4dit"]
[ext_resource type="PackedScene" uid="uid://be1r3b3neri51" path="res://scenes/level_map/level_map_node.tscn" id="6_2jbhw"]
[ext_resource type="Script" path="res://scenes/level_map/level_map_cursor.gd" id="6_hr126"]
[ext_resource type="Texture2D" uid="uid://m88s14tq1xkt" path="res://assets/level_select.png" id="7_7w5sb"]
[ext_resource type="Script" path="res://scenes/level_map/crystal_info.gd" id="7_gxw7w"]
[ext_resource type="PackedScene" uid="uid://ceykegurm2m3a" path="res://scenes/level_map/level_map_connector.tscn" id="7_ohwbg"]
[ext_resource type="PackedScene" uid="uid://dyv7olmjrvbo3" path="res://scenes/level_map/level_map_arrow.tscn" id="8_tdmwx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ne2b6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nv6qf"]
content_margin_left = 32.0
content_margin_right = 0.0
bg_color = Color(0.655562, 0.303241, 0.444274, 1)
draw_center = false
border_width_left = 8
border_width_right = 8
border_color = Color(0.625597, 0.625597, 0.625597, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="LabelSettings" id="LabelSettings_0xuug"]
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_553g7"]
font_size = 100
font_color = Color(0.219608, 0.411765, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_gbq8l"]
color = Color(0.625597, 0.625597, 0.625597, 1)
thickness = 7

[sub_resource type="LabelSettings" id="LabelSettings_jbx2i"]
font = ExtResource("2_luebk")
font_size = 55
font_color = Color(0.923173, 0.923173, 0.923173, 1)

[sub_resource type="GDScript" id="GDScript_fgtaq"]
script/source = "extends ParallaxBackground

@export var speed:Vector2 = Vector2(100, 50)


func _process(delta: float) -> void:
  scroll_offset += speed * delta
"

[sub_resource type="AtlasTexture" id="AtlasTexture_cbvlq"]
atlas = ExtResource("7_7w5sb")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uynsh"]
atlas = ExtResource("7_7w5sb")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oudi6"]
atlas = ExtResource("7_7w5sb")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuipc"]
atlas = ExtResource("7_7w5sb")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_452to"]
atlas = ExtResource("7_7w5sb")
region = Rect2(288, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqhgl"]
atlas = ExtResource("7_7w5sb")
region = Rect2(384, 96, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_uv4m7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbvlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uynsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oudi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuipc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_452to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqhgl")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nb2ei"]
atlas = ExtResource("7_7w5sb")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70t40"]
atlas = ExtResource("7_7w5sb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdcq5"]
atlas = ExtResource("7_7w5sb")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4bmj"]
atlas = ExtResource("7_7w5sb")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oikr2"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb2ei")
}],
"loop": false,
"name": &"_",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_70t40")
}],
"loop": false,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdcq5")
}],
"loop": false,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4bmj")
}],
"loop": false,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_onixx"]
atlas = ExtResource("7_7w5sb")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnnix"]
atlas = ExtResource("7_7w5sb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_td6cn"]
atlas = ExtResource("7_7w5sb")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_obsna"]
atlas = ExtResource("7_7w5sb")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_du4fx"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onixx")
}],
"loop": false,
"name": &"_",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnnix")
}],
"loop": false,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td6cn")
}],
"loop": false,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obsna")
}],
"loop": false,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_n6idt"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onixx")
}],
"loop": false,
"name": &"_",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnnix")
}],
"loop": false,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td6cn")
}],
"loop": false,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obsna")
}],
"loop": false,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_fop6c"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onixx")
}],
"loop": false,
"name": &"_",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnnix")
}],
"loop": false,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td6cn")
}],
"loop": false,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obsna")
}],
"loop": false,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_emhho"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onixx")
}],
"loop": false,
"name": &"_",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnnix")
}],
"loop": false,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td6cn")
}],
"loop": false,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obsna")
}],
"loop": false,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_l65vo"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onixx")
}],
"loop": false,
"name": &"_",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnnix")
}],
"loop": false,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td6cn")
}],
"loop": false,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obsna")
}],
"loop": false,
"name": &"red",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6c1hp"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onixx")
}],
"loop": false,
"name": &"_",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnnix")
}],
"loop": false,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td6cn")
}],
"loop": false,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_obsna")
}],
"loop": false,
"name": &"red",
"speed": 5.0
}]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_7shaq")
script = ExtResource("2_s0hvj")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_dqn4j")
script = ExtResource("4_737iy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 101
text = " Level Map"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="placeholder" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ne2b6")

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 800)
layout_mode = 2
theme_override_constants/separation = 90
theme_override_styles/separator = SubResource("StyleBoxFlat_nv6qf")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="level_title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "DIII"
label_settings = SubResource("LabelSettings_0xuug")

[node name="level_suffix" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "-B"
label_settings = SubResource("LabelSettings_553g7")
script = ExtResource("4_v353u")

[node name="line" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/separator = SubResource("StyleBoxLine_gbq8l")

[node name="HBoxContainer2" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 19
theme_override_constants/v_separation = 13
columns = 2

[node name="txt_chroma" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "cystals:"
label_settings = SubResource("LabelSettings_jbx2i")
horizontal_alignment = 2

[node name="lab_chroma" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("7_gxw7w")

[node name="none" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_chroma"]
layout_mode = 2
text = "none"
label_settings = SubResource("LabelSettings_jbx2i")
horizontal_alignment = 2

[node name="blue" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_chroma"]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.0352941, 0.415686, 0.92549, 1)

[node name="red" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_chroma"]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.635294, 0.188235, 0, 1)

[node name="green" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_chroma"]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.219608, 0.411765, 0, 1)

[node name="txt_secrets" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "secrets:"
label_settings = SubResource("LabelSettings_jbx2i")
horizontal_alignment = 2

[node name="lab_secrets" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0 / 5"
label_settings = SubResource("LabelSettings_jbx2i")

[node name="txt_time" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "best times:"
label_settings = SubResource("LabelSettings_jbx2i")
horizontal_alignment = 2

[node name="lab_self_time" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("7_gxw7w")

[node name="none" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_self_time"]
visible = false
layout_mode = 2
text = "none"
label_settings = SubResource("LabelSettings_jbx2i")
horizontal_alignment = 2

[node name="blue" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_self_time"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.0352941, 0.415686, 0.92549, 1)

[node name="red" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_self_time"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.635294, 0.188235, 0, 1)

[node name="green" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_self_time"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.219608, 0.411765, 0, 1)

[node name="time" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_self_time"]
layout_mode = 2
text = "00:00.00"
label_settings = SubResource("LabelSettings_jbx2i")

[node name="ph0" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_jbx2i")
horizontal_alignment = 2

[node name="lab_alt0_time" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("7_gxw7w")

[node name="none" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_alt0_time"]
visible = false
layout_mode = 2
text = "none"
label_settings = SubResource("LabelSettings_jbx2i")
horizontal_alignment = 2

[node name="blue" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_alt0_time"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.0352941, 0.415686, 0.92549, 1)

[node name="red" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_alt0_time"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.635294, 0.188235, 0, 1)

[node name="green" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_alt0_time"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.219608, 0.411765, 0, 1)

[node name="time" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_alt0_time"]
layout_mode = 2
text = "00:00.00"
label_settings = SubResource("LabelSettings_jbx2i")

[node name="ph1" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_jbx2i")
horizontal_alignment = 2

[node name="lab_alt1_time" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("7_gxw7w")

[node name="none" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_alt1_time"]
visible = false
layout_mode = 2
text = "none"
label_settings = SubResource("LabelSettings_jbx2i")
horizontal_alignment = 2

[node name="blue" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_alt1_time"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.0352941, 0.415686, 0.92549, 1)

[node name="red" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_alt1_time"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.635294, 0.188235, 0, 1)

[node name="green" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_alt1_time"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.219608, 0.411765, 0, 1)

[node name="time" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/lab_alt1_time"]
layout_mode = 2
text = "00:00.00"
label_settings = SubResource("LabelSettings_jbx2i")

[node name="placeholder2" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_ne2b6")

[node name="placeholder3" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 80
theme_override_styles/separator = SubResource("StyleBoxEmpty_ne2b6")

[node name="launch" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = ">> launch"
alignment = 0

[node name="btn_back_title" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 51
text = "quit to title"
alignment = 2

[node name="Parallax2D" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true
script = SubResource("GDScript_fgtaq")

[node name="stars" type="ParallaxLayer" parent="Parallax2D"]
visibility_layer = 16
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(2048, 2048)

[node name="Icon" type="Sprite2D" parent="Parallax2D/stars"]
position = Vector2(960, 520)
scale = Vector2(2, 2)
texture = ExtResource("3_hunw0")

[node name="stars2" type="ParallaxLayer" parent="Parallax2D"]
visibility_layer = 16
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(2048, 2048)

[node name="Icon" type="Sprite2D" parent="Parallax2D/stars2"]
position = Vector2(960, 520)
scale = Vector2(2, 2)
texture = ExtResource("4_137gh")

[node name="level_map" type="Node2D" parent="."]
texture_filter = 3
position = Vector2(256, 768)
scale = Vector2(2, 2)
script = ExtResource("5_d4dit")

[node name="cursor" type="AnimatedSprite2D" parent="level_map"]
position = Vector2(192, -32)
rotation = 4.71239
sprite_frames = SubResource("SpriteFrames_uv4m7")
frame = 1
script = ExtResource("6_hr126")
opening = 8

[node name="nodes" type="Node2D" parent="level_map"]

[node name="level_0_b" parent="level_map/nodes" instance=ExtResource("6_2jbhw")]
position = Vector2(16, 16)
sprite_frames = SubResource("SpriteFrames_oikr2")
animation = &"blue"

[node name="level_1_b" parent="level_map/nodes" instance=ExtResource("6_2jbhw")]
position = Vector2(112, 16)
sprite_frames = SubResource("SpriteFrames_du4fx")
animation = &"blue"

[node name="level_2_b" parent="level_map/nodes" instance=ExtResource("6_2jbhw")]
position = Vector2(208, 16)
sprite_frames = SubResource("SpriteFrames_n6idt")
animation = &"blue"

[node name="level_0_g" parent="level_map/nodes" instance=ExtResource("6_2jbhw")]
position = Vector2(16, -176)
sprite_frames = SubResource("SpriteFrames_fop6c")
animation = &"green"

[node name="level_1_g" parent="level_map/nodes" instance=ExtResource("6_2jbhw")]
position = Vector2(112, -176)
sprite_frames = SubResource("SpriteFrames_emhho")

[node name="level_0_r" parent="level_map/nodes" instance=ExtResource("6_2jbhw")]
position = Vector2(16, -80)
sprite_frames = SubResource("SpriteFrames_l65vo")
animation = &"red"

[node name="level_1_r" parent="level_map/nodes" instance=ExtResource("6_2jbhw")]
position = Vector2(112, -80)
sprite_frames = SubResource("SpriteFrames_6c1hp")

[node name="connector" parent="level_map/nodes" instance=ExtResource("7_ohwbg")]
position = Vector2(16, -128)

[node name="connector2" parent="level_map/nodes" instance=ExtResource("7_ohwbg")]
position = Vector2(16, -32)

[node name="arrow" parent="level_map/nodes" instance=ExtResource("8_tdmwx")]
position = Vector2(64, 16)

[node name="arrow3" parent="level_map/nodes" instance=ExtResource("8_tdmwx")]
position = Vector2(160, 16)

[node name="arrow2" parent="level_map/nodes" instance=ExtResource("8_tdmwx")]
position = Vector2(64, -80)
animation = &"red"

[node name="arrow4" parent="level_map/nodes" instance=ExtResource("8_tdmwx")]
position = Vector2(64, -176)
animation = &"green"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/launch" to="." method="_on_launch_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/btn_back_title" to="." method="_on_btn_back_title_pressed"]
